# paa

./: .cursorrules  .gitignore  .prettierignore  COVERAGE_STATUS.md  README.md  SECURITY-FIX-01.md  SECURITY-FIX-04-07.md  SECURITY-FIXES-SUMMARY.md  TESTING_FRONTEND.md  eslint.config.js  overlay.html  package-lock.json  package.json  playwright.config.coverage.ts  playwright.config.ts  pr21-review-analysis.md  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.tauri.conf.ts
src-tauri/: .llvm-cov.toml  COVERAGE_REPORT.md  Cargo.toml  Makefile.toml  TESTING.md  clippy.toml  coverage.ps1  coverage.sh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: amazon-session.json  default.json  screen-overlay.json  surugaya-session.json
src-tauri/migrations/: 001_init.sql  001_initial_tables.sql  002_add_dmm_shop_settings.sql  002_create_emails_table.sql  002_deliveries_order_updated_index.sql  002_news_clips.sql  002_product_master.sql  002_tracking_check_logs.sql  003_add_dmm_cancel_shop_settings.sql  003_create_orders_table.sql  003_extract_settings.sql  003_images_item_name_normalized.sql  003_item_exclusion_patterns.sql  003_orders_shop_name.sql  003_tracking_check_logs_unique_delivery.sql  004_add_dmm_order_number_change_shop_settings.sql  004_create_items_table.sql  004_news_clip_events.sql  004_parse_skipped.sql  004_remove_metadata_tables.sql  005_add_dmm_confirm_mono_sender.sql  005_create_images_table.sql  005_emails_unparsed_index.sql  005_remove_parse_skipped.sql  006_create_deliveries_table.sql  006_items_fts_trigram.sql  006_remove_window_settings.sql  006_shop_settings_unique.sql  007_add_dmm_split_complete_shop_settings.sql  007_create_htmls_table.sql  008_add_dmm_merge_complete_shop_settings.sql  008_create_order_emails_table.sql  009_add_dmm_send_shop_settings.sql  009_create_order_htmls_table.sql  010_create_sync_metadata_table.sql  010_update_dmm_subject_filters.sql  011_add_internal_date_to_emails.sql  011_orders_order_number_nocase_index.sql  012_add_max_iterations_to_sync_metadata.sql  012_manual_overrides.sql  (+8 more)
src-tauri/src/: batch_commands.rs  batch_run_state.rs  batch_runner.rs  clipboard_watcher.rs  config.rs  e2e_mocks.rs  e2e_seed.rs  gmail.rs  gmail_client.rs  image_utils.rs  lib.rs  main.rs  metadata_export.rs  repository.rs  scheduler.rs
src-tauri/src/commands/: amazon_session.rs  api_keys.rs  config.rs  delivery_check.rs  exclusion_patterns.rs  image_search.rs  log.rs  metadata.rs  mod.rs  news.rs  ocr.rs  overrides.rs  parse.rs  product_master.rs  product_parse.rs  shop_settings.rs  stats.rs  surugaya_session.rs  sync.rs  ui_pipeline.rs  window.rs
src-tauri/src/delivery_check/: mod.rs
src-tauri/src/gemini/: client.rs  config.rs  mod.rs  ocr.rs  product_parse_task.rs  product_parser.rs
src-tauri/src/gmail/: client.rs  config.rs  gmail_sync_task.rs  mod.rs
src-tauri/src/google_search/: client.rs  config.rs  mod.rs
src-tauri/src/logic/: email_parser.rs  email_stats_logic.rs  mod.rs  parse_logic.rs  sync_logic.rs  window_logic.rs
src-tauri/src/metadata/: export.rs  file_safety.rs  import.rs  manifest.rs  mod.rs  restore.rs  table_converters.rs
src-tauri/src/orchestration/: delivery_check_orchestrator.rs  error_handler.rs  mod.rs  parse_orchestrator.rs  pipeline_steps.rs  (+4 more)
src-tauri/tests/: command_tests.rs  migration_init_schema.rs  parser_integration_tests.rs
(+380 files in other folders)
