[package]
name = "paa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
google-gmail1 = "7"
yup-oauth2 = "12"
chrono = "0.4"
base64 = "0.22"
encoding_rs = "0.8"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "rustls-native-certs", "tls12"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webbrowser = "1"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "tls-rustls-ring"] }
regex = "1"
once_cell = "1"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
wiremock = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

[profile.dev]
# テスト時の最適化を有効化（カバレッジ計測の精度向上）
opt-level = 0
debug = true

